# ksmallSolution

./: .file.swp  CMakeLists.txt  README.md  arrayTracker.cpp  arrayTracker.h  file  file2  ksmallRuleChecker.cpp  ksmallRuleChecker.h  ksmallSolution.cpp  ksmallSolution.h  ksmallTester.cpp  ksmallTester.h  main.cpp
